# qsapecng

./: .gitmodules  CMakeLists.txt
cmake/Modules/: FindQwt6.cmake
src/: CMakeLists.txt
src/gui/: delegate.cpp  delegate.h  extendedmdiarea.cpp  extendedmdiarea.h  qlogger.cpp  qsapecng.cpp  qsapecngwindow.cpp  qsapecngwindow.h  sidebarmodel.cpp  sidebarmodel.h  sidebarview.cpp  sidebarview.h
src/gui/configdialog/: configdialog.cpp  configdialog.h  configpage.cpp  configpage.h
src/gui/editor/: component.cpp  graphicsnode.cpp  graphicsnode.h  item.cpp  item.h  label.h  metacircuit_thread.cpp  propertytextitem.cpp  propertytextitem.hpp  schematiceditor.cpp  schematiceditor.h  schematicscene.cpp  schematicscene.h  schematicsceneparser.cpp  schematicview.cpp  schematicview.h  undoredocommand.cpp  undoredocommand.h
src/gui/workplane/: workplane.cpp  workplane.h
